# clamav

./: .clang-format  .cvsignore  .dockerignore  .gitattributes  .gitignore  .gitmodules  AUTHORS  AUTHORS.md  Authenticode_PE.docx  BUGS  CMakeLists.txt  CMakeOptions.cmake  CMakePresets.json  CODE_OF_CONDUCT.md  COPYING  COPYING.YARA  COPYING.llvm  COPYING.lzma  COPYING.nsis  COPYING.regex  COPYING.sha256  COPYING.unrar  COPYING.zlib  Cargo.toml  ChangeLog  ChangeLog.md  Dockerfile  FAQ  INSTALL-cross-linux-arm64.md  INSTALL-cross-windows-arm64.md  INSTALL.autotools.md  INSTALL.cmake.md  INSTALL.md  Jenkinsfile  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.Docker.md  (+32 more)
CLAM-1328/: CMakeLists.txt  CMakeOptions.cmake
CLAM-1328/JITMain/: CMakeLists.txt  JITMain.cpp
CLAM-1328/TestJIT/: CMakeLists.txt  TestJIT.cpp
CLAM-1328/cmake/: FindClang.cmake  FindLLVM.cmake
certs/: CMakeLists.txt  clamav-beta.crt  clamav.crt
clamav-devel/: .cvsignore  AUTHORS  BUGS  ChangeLog  FAQ  Makefile.am  Makefile.in  NEWS  README  TODO  UPGRADE  acinclude.m4  aclocal.m4  clamav-config  clamav-config.h.in  configure  configure.in  mkinstalldirs
clamav-devel/clamav-milter/: INSTALL  Makefile.am  Makefile.in  clamav-milter.c  clamav-milter.po  clamav-milter.sh
clamav-devel/clamconf/: Makefile.am  Makefile.in  clamconf.c
clamav-devel/clamd/: .cvsignore  Makefile.am  Makefile.in  cfgfile.c  cfgfile.h  clamd.c  clamuko.c  dazuko.h  dazukoio.c  dazukoio.h  defaults.h  localserver.c  localserver.h  options.c  options.h  others.c  others.h  scanner.c  scanner.h  server-proc.c  server-th.c  server.c  server.h  session.c  session.h  shared.h  tcpserver.c  tcpserver.h  tests.c  tests.h  thrmgr.c  thrmgr.h
clamav-devel/clamdscan/: Makefile.am  Makefile.in  clamdscan.c  client.c  client.h  defaults.h  options.c
clamav-devel/clamscan/: .cvsignore  Makefile.am  Makefile.in  clamscan.c  clamscan_opt.h  defaults.h  manager.c  manager.h  options.c  options.h  others.c  others.h  shared.h  treewalk.c  treewalk.h
clamav-devel/database/: Makefile.am  Makefile.in  mirrors.txt  viruses.db2
clamav-devel/docs/: Makefile.am  Makefile.in  clamav-milter.1  clamav-milter.8  clamav.conf.5  clamdoc.tex  clamdscan.1  freshclam.1  signatures.tex  sigtool.1
clamav-devel/etc/: Makefile.am  Makefile.in  clamav.conf  clamd.conf  freshclam.conf
clamav-devel/examples/: ex1.c
clamav-devel/freshclam/: .cvsignore  Makefile.am  Makefile.in  defaults.h  dns.c  dns.h  execute.c  freshclam.c  freshclam.h  manager.c  manager.h  mirman.c  mirman.h  nonblock.c  notify.c  notify.h  options.c  options.h
clamav-devel/libclamav/: Makefile.am  Makefile.in  binhex.c  binhex.h  blob.c  blob.h  cab.c  cab.h  chmunpack.c  chmunpack.h  clamav.h  cltypes.h  cvd.c  cvd.h  dconf.c  dconf.h  defaults.h  dsig.c  dsig.h  elf.c  elf.h  encoding_aliases.h  entconv.c  filetypes.c  filetypes.h  fsg.c  fsg.h  hashtab.c  htmlnorm.c  htmlnorm.h  is_tar.c  is_tar.h  js.c  js.h  jscript.c  line.c  line.h  lockdb.c  lockdb.h  matcher-ac.c  (+81 more)
clamav-devel/shared/: cdiff.c  cfgparser.c  cfgparser.h  memory.c  memory.h  misc.c  misc.h  network.c  options.c  options.h  output.c  output.h  strutil.h
clamav-devel/sigtool/: .cvsignore  Makefile.am  options.c  (+5 more)
clamav-milter/: .gitignore  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  allow_list.c  allow_list.h  clamav-milter.c  clamav-milter.po  clamav-milter.ref.c  clamd.sh  clamfi.c  clamfi.h  connpool.c  connpool.h  netcode.c  netcode.h  whitelist.c  whitelist.h
clamav-sys/: Cargo.toml  README.md  build.rs  build_internal.rs  wrapper.h
clambc/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  bcrun.c
clamconf/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  clamconf.c
clamd/: .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  cfgfile.c  cfgfile.h  clamav-daemon.service  clamav-daemon.service.in  clamav-daemon.socket  clamav-daemon.socket.in  clamd.c  clamd_others.c  clamd_others.h  clamuko.c  clamuko.h  clamukofs.c  clamukofs.h  dazuko_xp.h  dazukofs.c  dazukofs.h  dazukoio.c  dazukoio.h  dazukoio_compat12.c  dazukoio_compat12.h  dazukoio_xp.h  defaults.h  fan-syscalllib.h  fan.c  fan.h  fts.c  localserver.c  localserver.h  onaccess_ddd.c  onaccess_ddd.h  onaccess_fan.c  onaccess_fan.h  onaccess_hash.c  onaccess_hash.h  onaccess_others.c  (+21 more)
clamdscan/: .cvsignore  .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  clamav-clamdscan@.service.in  clamav-clamdscan@.timer.in  clamd_fdscan.c  clamd_fdscan.h  clamdscan.c  clamdscan.map  client.c  client.h  defaults.h  proto.c  proto.h
clamdtop/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  clamdtop.c
clamonacc/: CMakeLists.txt  Makefile.am  Makefile.in  clamav-clamonacc.service.in  clamonacc.c  clamonacc.h  onaccess_client.c  onaccess_ddd.c  onaccess_fan.c  onaccess_hash.c  onaccess_others.c  onaccess_proto.c  onaccess_scth.c
clamscan/: .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  clamav-clamscan@.service.in  clamav-clamscan@.timer.in  clamscan.c  clamscan_opt.h  defaults.h  getopt.c  global.h  manager.c  manager.h  options.c  others.c  others.h  shared.h  treewalk.c  treewalk.h
clamsubmit/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  clamsubmit.c
common/: CMakeLists.txt  Makefile.am  actions.c  actions.h  cdiff.c  cdiff.h  cert_util.c  cert_util.h  cert_util_internal.h  clamdcom.c  clamdcom.h  exeScanner.c  exeScanner.h  fdpassing.h  getopt.c  getopt.h  hostid.c  hostid.h  idmef_logging.c  idmef_logging.h  misc.c  misc.h  optparser.c  optparser.h  output.c  output.h  scanmem.c  scanmem.h  service.c  service.h  tar.c  tar.h
database/: Makefile.am  Makefile.in  empty.ndb  mirrors.txt  viruses.db
docs/: BasePackage.md  CMakeLists.txt  ClamAV_Document_Properties.xlsx  ClamAntiVirusUserManual.md  Installation.md  Introduction.md  Makefile.am  Makefile.in  Signatures.md  Usage.md  UserManual.md  clam.eps  clamav-milter.8  clamav.conf.5  clamd.8  clamdoc.tex  clamdscan.1  clamscan.1  phishsigs_howto.lyx  phishsigs_howto.tex  signatures.tex  sigtool.1
(+3216 files in other folders)
